<resources>
    <string name="app_name">No BS Tap Tempo</string>

    <string name="help_about1">About</string>
    <string name="help_what_is">This app measures BPM (Beats Per Minute),
        measuring the frequency of your taps on the screen.</string>
    <string name="help_what_is2">4 displays to average last 2, 5, 10 and 20 taps.</string>
    <string name="help_about2">This app created by batyanko.
        \nIdea from HSTempo by Hideki Saito:
        \nhttps://play.google.com/store/apps/details?id=hsware.HSTempo
    </string>
    <string name="help_about2_feedback">Any suggestions and feedback welcome - just write me.
        \nI read all e-mail ;)
    </string>
    <string name="help_about3" translatable="false">E-mail\nbatyankodev@gmail.com</string>
    <string name="help_about4" translatable="false">Web\nwww.batyanko.com</string>
    <string name="help_about5" translatable="false">Github\nhttps://github.com/batyanko/no-bs-tap-tempo</string>
    <string name="help_license1">License</string>
    <string name="help_license2">No BS Tap Tempo is being developed under the Apache 2.0 license http://www.apache.org/licenses/LICENSE-2.0 .
        Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.</string>
    <string name="help_privacy1">Privacy Policy</string>
    <string name="help_privacy2">The No BS Tap Tempo app:</string>
    <string name="help_privacy3">- stores no user data.</string>
    <string name="help_privacy4">- uses no internet connection.</string>
    <string name="help_privacy5"> Ads are BS, therefore The No BS Tap Tempo app shows no ads.</string>
    <string name="beat_count_title">Beat Count</string>
    <string name="elapsed_title">Elapsed (s)</string>
    <string name="reset_title">Reset</string>
    <string name="last_2_title">Last 2</string>
    <string name="last_5_title">Last 5</string>
    <string name="last_10_title">Last 10</string>
    <string name="last_20_title">Last 20</string>
    <string name="hit_me_text">Tap here!</string>

    <string name="pref_fractions" translatable="false">pref_fractions</string>
</resources>